tests/parser_samples/valid/macroinstruction_def.mas
%i i1 {
    a;
}

%i i2(+, -) {
    a;
    b;
}

%i i3(1) {
    a;
    b;
    c;
}