tests/parser_samples/invalid/bit_masks/3.mas
%i a(1, a) {
    |;
}